<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Realto</string>
    <string name="agent_app_name">RealTo Agent</string>
    <string name="menu_about">About</string>
    <string name="menu_agent_login">Agent Login</string>
    <string name="interested">Get Contacted</string>
    <string name="company">by Radiant Technologies</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="mail">Email Address</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="contact_info">Contact Info</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_upload">New Upload</string>
    <string name="gallery_empty">Gallery Empty</string>
    <string name="image_gallery">Gallery</string>
    <string name="email_agent">Email Agent</string>
    <string name="title">Title</string>
    <string name="select_location">Address</string>
    <string name="description">Enter Description</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading</string>
    <string name="discard">Discard</string>
    <string name="discard_entry">Discard Entry?</string>
    <string name="add_image">+</string>
    <string name="images">Add Images (Max 5)</string>
    <string name="no_data">No Data</string>
    <string name="network_error">Network Error</string>
    <string name="settings">Settings</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="not_available">NA</string>
    <string name="authenticating">Authenticating</string>
    <string name="search">Search</string>
    <string name="enter_location">Enter Location</string>
    <string name="show_all">Show All</string>
    <string name="or">OR</string>
    <string name="bedroom">Bedroom(s)</string>
    <string name="bathroom">Bathroom(s)</string>
    
    <string name="error_login_failed">Loging failed. Please try again.</string>
    <string name="error_login_worng_credintials">Loging failed because of wrong usernmae or password.</string>
    <string name="error_maps_app">Maps application not found!</string>
    <string name="error_contact_entry">Please enter all the contact informations asked for!</string>
    <string name="error_login_field_empty">Please enter your username and password.</string>
    <string name="error_server_data_fetching">An error occurred while trying to fetch data from the server.</string>
    <string name="error_no_network_gallery">No network connection. Unable to fetch gallery data.</string>
    <string name="error_no_network">No network connection found.</string>
    <string name="error_uploading">An error occurred while uploading data.</string>
    
    <string-array name="image_picker_options">
        <item>From Gallery</item>
        <item>Take Image</item>
    </string-array>
    
    <string-array name="bedroom_count">
        <item>1 Bedroom</item>
        <item>2 Bedrooms</item>
        <item>3 Bedrooms</item>
        <item>4 Bedrooms</item>
        <item>5 Bedrooms</item>
    </string-array>
    
    <string-array name="search_bedroom_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string-array name="bathroom_count">
        <item>1 Bathroom</item>
        <item>1.5 Bathrooms</item>
        <item>2 Bathrooms</item>
        <item>2.5 Bathrooms</item>
        <item>3 Bathrooms</item>
        <item>3.5 Bathrooms</item>
        <item>4 Bathrooms</item>
        <item>4.5 Bathrooms</item>
        <item>5 Bathrooms</item>
        <item>5.5 Bathrooms</item>
    </string-array>
    
    <string-array name="search_bathroom_count">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
    </string-array>
    
    <string-array name="other_rooms">
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>Covered Car Garage</item>
        <item>Swimming Pool</item>
        <item>Basement</item>
        <item>Attic</item>
    </string-array>
</resources>