<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/agent_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableRight="@drawable/ic_action_person"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />

    <EditText
        android:id="@+id/agent_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableRight="@drawable/ic_action_password"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/agent_login_procced_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_login_button"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</LinearLayout>