<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/upload_property_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:drawableLeft="@drawable/ic_action_house"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/upload_enter_address"
                style="@style/UploadFormDetailsEditText"
                android:drawableLeft="@drawable/ic_action_map"
                android:hint="@string/select_location"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/upload_enter_price"
                style="@style/UploadFormDetailsEditText"
                android:drawableLeft="@drawable/ic_action_coins"
                android:hint="@string/price"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/upload_description"
                style="@style/UploadFormDetailsEditText"
                android:drawableLeft="@drawable/ic_action_description"
                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:lines="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:fontFamily="sans-serif-condensed"
                android:padding="5dp"
                android:text="@string/images"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:overScrollMode="never"
                android:padding="3dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/upload_add_image_btn"
                        style="@style/UploadAddImageButton" />

                    <ImageView
                        android:id="@+id/upload_image_1"
                        style="@style/UploadImageContainer"
                        android:contentDescription="@string/gallery_image" />

                    <ImageView
                        android:id="@+id/upload_image_2"
                        style="@style/UploadImageContainer"
                        android:contentDescription="@string/gallery_image" />

                    <ImageView
                        android:id="@+id/upload_image_3"
                        style="@style/UploadImageContainer"
                        android:contentDescription="@string/gallery_image" />

                    <ImageView
                        android:id="@+id/upload_image_4"
                        style="@style/UploadImageContainer"
                        android:contentDescription="@string/gallery_image" />

                    <ImageView
                        android:id="@+id/upload_image_5"
                        style="@style/UploadImageContainer"
                        android:contentDescription="@string/gallery_image" />
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/upload_other_rooms_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerVertical"
                android:orientation="vertical"
                android:padding="5dp"
                android:showDividers="middle" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/bedroom"
                        android:textColor="@color/body_text_color"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/upload_bedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/search_bedroom_count" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/bathroom"
                        android:textColor="@color/body_text_color"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/upload_bathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/search_bathroom_count" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/upload_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_login_button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/upload"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/upload_discard_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_offline_read_button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/discard"
            android:textColor="#FF838383" />
    </LinearLayout>

</LinearLayout>