<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:text="@string/search"
            android:textColor="@color/body_text_color"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/slider_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/search_location_edittext"
                style="@style/UploadFormDetailsEditText"
                android:drawableLeft="@drawable/ic_action_map"
                android:hint="@string/enter_location"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:padding="5dp"
                    android:text="@string/bedroom"
                    android:textColor="@color/body_text_color"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/search_bedrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/search_bedroom_count" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:padding="5dp"
                    android:text="@string/bathroom"
                    android:textColor="@color/body_text_color"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/search_bathrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/search_bathroom_count" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_other_rooms_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerVertical"
                android:orientation="vertical"
                android:padding="5dp"
                android:showDividers="middle" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/selector_login_button"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/search"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/or"
                android:textColor="@color/body_text_color"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/search_show_all_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/selector_offline_read_button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/show_all"
            android:textColor="#FF838383" />
    </LinearLayout>

</ScrollView>